--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
   text-align: center;
   background-color: #283149;
   user-select: none;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
@@ -21,7 +23,6 @@ footer {
   margin: 20px auto;
   margin-top: 8px;
   display: grid;
-  gap:2px;
   border: 4px solid rgb(94, 116, 149);
   border-radius: 8px;
 }
@@ -32,23 +33,23 @@ footer {
 }
 .btnbox {
   margin: 0px;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  border: 1px solid white;
   padding: 0px;
   outline: none;
-  font-size: 10px;
-  width: 20px;
-   height: 20px;
    text-align: center;
    transition: 0.3s;
    background-size: 200% auto;
    color: white;            
  }
+ .btnbox:hover {
+   background-position: right center;
+   border: 1px solid rgb(114, 114, 114);
+ }
  .btnclass{
     background-image: linear-gradient(to right, #4260f8 0%, #160357  61%, #0320b0  95%);
-    border: 2px; 
     border-radius: 10px;
     background-size: 200% auto;
+    border:2px solid  rgb(145, 145, 164);
     transition: 0.3s;
     height: 30px;
     width: 100px;
@@ -56,15 +57,7 @@ footer {
  }
  .btnclass:hover {
    background-position: left right;
-   color: #fff;
-   border:1px solid rgb(0, 0, 0);
-   text-decoration: none;
- }
- .btnbox:hover {
-   background-position: right center;
-   color: #fff;
-   border:1px solid white;
-   text-decoration: none;
+   border:2px solid rgb(255, 255, 255);
  }
  a{
   text-decoration: none;
@@ -74,12 +67,15 @@ footer {
  }
  .menuitems{
   cursor:pointer;
+  font-size: 20px;
   position: relative;
+  color:rgb(68, 0, 255);
   text-align: center;
 }
 .menuitems:hover{
-  color: rgba(15, 14, 14, 0.892);
+  color: rgba(255, 255, 255, 0.892);
 }
+
 .menuitems-content{
   display: flex;
   cursor:pointer;
@@ -106,9 +102,6 @@ footer {
   color: rgba(38, 0, 255, 0.892);
 }
 .hide{
-  display: none;
-}
-.hide1{
   display: none;
 }
 .background-dark{
@@ -162,27 +155,32 @@ input:focus{
 .margintb{
   margin-top:8px;margin-bottom:5px
 }
-
-.theme1{
+.themebtn{
   cursor: pointer;
   height: 20px;
   width:20px;
   border:3.2px solid rgb(201, 198, 198);
+}
+.theme1{
   background-image: linear-gradient(to right, #0a3dd7 0%, #3f90fa  95%);
 }
 .theme2{
-  cursor: pointer;
-  height: 20px;
-  width:20px;
-  border:3.2px solid rgb(201, 198, 198);
   background-image: linear-gradient(to left, #ee1212 0%, #fa3f3f  95%);
 }
 .theme3{
-  cursor: pointer;
-  height: 20px;
-  width:20px;
-  border:3.2px solid rgb(201, 198, 198);
   background-image: linear-gradient(to right, #0ccc22 0%, #0ad021  95%);
+}
+.theme4{
+  background-image: linear-gradient(to right, #b20df3 0%, #ef0ef3  95%);
+}
+.theme5{
+  background-image: linear-gradient(to right,#dddddd 0%, #bbbbbb  95%);
+}
+.theme6{
+  background-image: linear-gradient(to right, #828282 0%, #606060  95%);
+}
+.theme7{
+  background-image: linear-gradient(to right, #f1de4d 0%, #faf73f  95%);
 }
 .blue{
   background-image: linear-gradient(to right, #4d76f1 0%, #0b0264  61%, #3f90fa  95%);
@@ -193,5 +191,20 @@ input:focus{
 .green{
   background-image: linear-gradient(to right, #4df160 0%, #216402  61%, #3ffa55  95%);
 }
-
-.btnbox1 {background-image: linear-gradient(to right, #4d76f1 0%, #0b0264  61%, #3f90fa  95%);}
+.purp{
+  background-image: linear-gradient(to right, #c34df1 0%, #5c0264  61%, #f73ffa  95%);
+}
+.white{
+  background-image: linear-gradient(to right, #dddddd 0%, #79767a  61%, #bbbbbb  95%);
+}
+.black{
+  background-image: linear-gradient(to right, #828282 0%, #303030  61%, #606060  95%);
+}
+.yellow{
+  background-image: linear-gradient(to right, #f1de4d 0%, #645c02  61%, #faf73f  95%);
+  background-color:  #f1de4d 0%;
+}
+.footer{
+  font-size: 2rem;
+  color:white;
+}
