--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@ body {
 }
 
 h1 {
-  font-size: 5rem;
-  margin:13px;
+  font-size: 4.4rem;
+  margin:3px;
   color: #DBEDF3;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
+  text-shadow: 3px 0 #6104da;
 
 }
 
